--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Scales</title>
+	<title>Lightning</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles.css">
 	<script src="processing.js"></script>
@@ -10,14 +10,14 @@
 
 <body>
 	<header>
-		<h1>Very cool scales</h1>
+		<h1>Paint !</h1>
 	</header>
 	<section id="content">
-		<canvas id="VirtualPet" data-processing-sources="Scales.pde">
+		<canvas id="VirtualPet" data-processing-sources="Lightning.pde">
 		</canvas>
 	</section>
 	<footer>
-		Hi, Joshua Paza, Bk 0, Mr. Chan
+		Try out the buttons and see! Made, by yours truly Josh Paza, BK 0, Mr. Chan ;P
 		<a href="https://github.com/jopaza21/Scales">check out my code here! :)</a>
 	</footer>
 </body>
