--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1>Paint !</h1>
 	</header>
 	<section id="content">
-		<canvas id="VirtualPet" data-processing-sources="Lightning.pde">
+		<canvas id="VirtualPet" data-processing-sources="lightning.pde">
 		</canvas>
 	</section>
 	<footer>
