--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<header>
 		<h1>Paint !</h1>
+		<h4>Try out the buttons and see!</h4>
 	</header>
 	<section id="content">
 		<canvas id="VirtualPet" data-processing-sources="lightning.pde">
