--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</canvas>
 	</section>
 	<footer>
-		Try out the buttons and see! Made, by yours truly Josh Paza, BK 0, Mr. Chan ;P
+		Made by yours truly Josh Paza, BK 0, Mr. Chan ;P
 		<a href="https://github.com/jopaza21/Lightning">check out my code here! :)</a>
 	</footer>
 </body>
