--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<h1>Paint !</h1>
-		<h4>Try out the buttons and see!</h4>
+		<h4>- try out the buttons i guess -</h4>
 	</header>
 	<section id="content">
 		<canvas id="VirtualPet" data-processing-sources="lightning.pde">
