--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</section>
 	<footer>
 		Made by yours truly Josh Paza, BK 0, Mr. Chan ;P
-		<a href="https://github.com/jopaza21/Lightning">check out my code here! :)</a>
+		<a href="https://github.com/jopaza21/Lightning"> link</a>
 	</footer>
 </body>
 
